# docs/swagger.json
@@ -53,6 +53,50 @@
                 }
             }
         },
+        "/oauth/{provider}": {
+            "get": {
+                "description": "Handles the callback from an OAuth2.0 provider after user authentication.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "OAuth"
+                ],
+                "summary": "OAuth2.0 Provider Callback",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "OAuth2.0 provider name (e.g., google, github)",
+                        "name": "provider",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Successfully authenticated and generated tokens",
+                        "schema": {
+                            "$ref": "#/definitions/domain.TokensPair"
+                        }
+                    },
+                    "404": {
+                        "description": "Account with this email not found",
+                        "schema": {
+                            "$ref": "#/definitions/domain.RequestResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error or failed to complete OAuth2.0 authentication",
+                        "schema": {
+                            "$ref": "#/definitions/domain.RequestResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/specialist/login": {
             "post": {
                 "description": "Login specialist",
@@ -272,9 +316,6 @@
                     "type": "integer"
                 },
                 "message": {
-                    "type": "string"
-                },
-                "type": {
                     "type": "string"
                 }
             }
