# internal/handlers/oauth_handler.go
@@ -1,6 +1,7 @@
 package handlers
 
 import (
+	"errors"
 	"fmt"
 	"net/http"
 	"pethelp-backend/internal/core/domain"
@@ -11,24 +12,42 @@ import (
 	"go.uber.org/zap"
 )
 
-const operationName = "oauth_handler:"
+const operationOAuthName = "oauth_handler:"
 
 // OAuthHandlers OAuth2.0 services contains
 type OAuthHandlersImpl struct {
-	OAuthService ports.OAuthService
-	Logger       *zap.Logger
+	oauthService      ports.OAuthService
+	specialistService ports.SpecialistService
+	tokenService      ports.TokenService
+	logger            *zap.Logger
 }
 
 var _ ports.OAuthHandlers = (*OAuthHandlersImpl)(nil)
 
 // NewOAuthHandlers create new OAuthHandlers
-func NewOAuthHandlers(service ports.OAuthService, logger *zap.Logger) *OAuthHandlersImpl {
-	return &OAuthHandlersImpl{OAuthService: service, Logger: logger}
+func NewOAuthHandlers(oauth ports.OAuthService, specialist ports.SpecialistService, token ports.TokenService, logger *zap.Logger) *OAuthHandlersImpl {
+	return &OAuthHandlersImpl{
+		oauthService:      oauth,
+		specialistService: specialist,
+		tokenService:      token,
+		logger:            logger,
+	}
 }
 
+// @Summary OAuth2.0 Provider Callback
+// @Description Handles the callback from an OAuth2.0 provider after user authentication.
+// @Tags OAuth
+// @Accept json
+// @Produce json
+// @Param provider path string true "OAuth2.0 provider name (e.g., google, github)"
+// @Success 201 {object} domain.TokensPair "Successfully authenticated and generated tokens"
+// @Failure 404 {object} domain.RequestResponse "Account with this email not found"
+// @Failure 500 {object} domain.RequestResponse "Internal server error or failed to complete OAuth2.0 authentication"
+// @Router /oauth/{provider} [get]
 // SignInWithProvider redirect to provider login page
-func (h *OAuthHandlersImpl) SignInWithProvider(c *gin.Context) {
+func (oh *OAuthHandlersImpl) SignInWithProvider(c *gin.Context) {
 	provider := c.Param("provider")
+	fmt.Println(provider)
 	q := c.Request.URL.Query()
 	q.Add("provider", provider)
 	c.Request.URL.RawQuery = q.Encode()
@@ -36,47 +55,49 @@ func (h *OAuthHandlersImpl) SignInWithProvider(c *gin.Context) {
 	gothic.BeginAuthHandler(c.Writer, c.Request)
 }
 
-// CallbackHandler process provider callback and save user data
-func (h *OAuthHandlersImpl) ProviderCallback(c *gin.Context) {
+func (oh *OAuthHandlersImpl) ProviderCallback(c *gin.Context) {
 	provider := c.Param("provider")
-	q := c.Request.URL.Query()
-	q.Add("provider", provider)
-	c.Request.URL.RawQuery = q.Encode()
 
-	user, err := gothic.CompleteUserAuth(c.Writer, c.Request)
+	user, err := oh.oauthService.InitOAuth(c.Request.Context(), provider, c.Writer, c.Request)
 	if err != nil {
-		messErr := fmt.Errorf("%s failed to complete OAuth2.0 authentication: %w", operationName, err)
-		h.Logger.Error("", zap.Error(messErr))
+		oauthErr := fmt.Errorf("%s failed to complete OAuth2.0 authentication: %w", operationOAuthName, err)
+		oh.logger.Error("", zap.Error(oauthErr))
 
-		errMessage := domain.RequestResponse{
+		oauthMessage := domain.RequestResponse{
 			Code:    http.StatusInternalServerError,
-			Type:    "OAuth error",
-			Message: messErr.Error(),
+			Message: "failed to complete OAuth2.0 authentication",
 		}
-		c.AbortWithStatusJSON(http.StatusInternalServerError, errMessage)
+		c.AbortWithStatusJSON(http.StatusInternalServerError, oauthMessage)
 		return
 	}
 
-	err = h.OAuthService.InitAuth(c.Request.Context(), &user)
+	specialist, err := oh.specialistService.ShowByEmail(c.Request.Context(), user.Email)
 	if err != nil {
-		messErr := fmt.Errorf("%s failed to save auth data: %w", operationName, err)
-		h.Logger.Error("", zap.Error(messErr))
-
-		errMessage := domain.RequestResponse{
-			Code:    http.StatusInternalServerError,
-			Type:    "DB error",
-			Message: messErr.Error(),
+		if errors.Is(err, domain.ErrAccountNotFound) {
+			c.AbortWithStatusJSON(http.StatusNotFound, domain.RequestResponse{
+				Code:    http.StatusNotFound,
+				Message: "account with this email not found",
+			})
+			return
 		}
-		c.AbortWithStatusJSON(http.StatusInternalServerError, errMessage)
+
+		c.AbortWithStatusJSON(http.StatusInternalServerError, domain.RequestResponse{
+			Code:    http.StatusInternalServerError,
+			Message: "internal server error",
+		})
 		return
 	}
 
-	tokenData := domain.TokensPair{
-		Access:  user.AccessToken,
-		Refresh: user.RefreshToken,
+	tokens, err := oh.tokenService.GenerateTokenPair(c.Request.Context(), &specialist)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusInternalServerError, domain.RequestResponse{
+			Code:    http.StatusInternalServerError,
+			Message: "Internal server error",
+		})
+		return
 	}
 
 	// — Success response
-	c.JSON(http.StatusCreated, tokenData)
+	c.JSON(http.StatusCreated, tokens)
 
 }
